Se termina funcionalidad pero sin hacer pruebas

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -49,7 +49,7 @@
             </div>
           </form>
           <div class="col text-center">
-            <a href="/"><i>¿Aún no tienes cuenta? Regístrate</i> </a>
+            <a href="/"><i>¿Ya tienes cuenta? Logeate</i> </a>
           </div>
         </div>
       </div>
