--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,19 +22,24 @@
           >
             El usuario ya existe, por favor inicie sesion
           </strong>
+          <strong
+            class="<%= logeoInvalido ? 'd-block' : 'd-none'%> text-danger"
+          >
+            Usuario y/o contraseña invalido
+          </strong>
         </div>
         <div class="card-body">
-          <form action="/login" class="text-center mx-5">
+          <form action="/" class="text-center mx-5">
             <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" required />
+              <input type="text" class="form-control" name="username" required />
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <input
                 type="password"
                 class="form-control"
-                id="password"
+                name="password"
                 required
               />
             </div>
