--- a/src/views/cars.ejs
+++ b/src/views/cars.ejs
@@ -1,21 +1,16 @@
-<% include partials/_headers %>
+<%- include('partials/_headers') %>
 <div class="container justify-content-center d-flex">
     <div class="card my-5 w-50">
       <div class="card-header text-center">
         <h5>Login a renta de carros</h5>
         <strong
-          class="<%= usuarioExists ? 'd-block' : 'd-none'%> text-danger"
-        >
-          El usuario ya existe, por favor inicie sesion
-        </strong>
-        <strong
-          class="<%= logeoInvalido ? 'd-block' : 'd-none'%> text-danger"
-        >
-          Usuario y/o contraseña invalido
-        </strong>
+            class="<%= carroExists ? 'd-block' : 'd-none'%> text-danger"
+          >
+            La placa ya existe, por favor intente con otra
+          </strong>
       </div>
       <div class="card-body">
-        <form action="/NewCar" class="text-center mx-5">
+        <form action="/NewCars" class="text-center mx-5" method="post">
           <div class="form-group">
             <label for="plateNumber">Numero de placa</label>
             <input type="text" class="form-control" name="plateNumber" required />
@@ -30,10 +25,17 @@
             />
           </div>
           <div class="form-group">
+            <label for="state">Estado</label>
+            <input type="text" class="form-control" name="state" required />
+          </div>
+          <div class="form-group">
             <button type="submit" class="btn btn-success w-100">Crear carro</button>
+          </div>
+          <div class="col text-center">
+            <a href="/rents"><i>¿Deseas hacer una renta?</i> </a>
           </div>
         </form>
       </div>
     </div>
   </div>
-<% include partials/_footer %>
+<%- include('partials/_footer')%>
