--- a/src/views/rents.ejs
+++ b/src/views/rents.ejs
@@ -1,55 +1,28 @@
-<% include partials/_headers %>
-<div class="container justify-content-center d-flex">
+<%- include('partials/_headers') %>
+  <div class="container justify-content-center d-flex">
     <div class="card my-5 w-50">
       <div class="card-header text-center">
         <h5>Login a renta de carros</h5>
-        <strong
-          class="<%= rentExists ? 'd-block' : 'd-none'%> text-danger"
-        >
-          Numero de renta ya existente, intente con otra
-        </strong>
-        <strong
-          class="<%= usuarioExists ? 'd-block' : 'd-none'%> text-danger"
-        >
-          El usuario ya existente, intente con otro
-        </strong>
-        <strong
-          class="<%= carroExists ? 'd-block' : 'd-none'%> text-danger"
-        >
-          El carro ya existente, intente con otro
-        </strong>
-
       </div>
       <div class="card-body">
-        <form action="/NewRent" class="text-center mx-5">
+        <form action="/NewRent" class="text-center mx-5" method="post">
           <div class="form-group">
             <label for="rentNumber">Numero de renta</label>
             <input type="text" class="form-control" name="rentNumber" required />
           </div>
           <div class="form-group">
             <label for="username">Usuario</label>
-            <input
-              type="text"
-              class="form-control"
-              name="username"
-              required
-            />
+            <input type="text" class="form-control" name="username" required />
           </div>
           <div class="form-group">
             <label for="platenumber">Numero de placa</label>
-            <input
-              type="text"
-              class="form-control"
-              name="platenumber"
-              required
-            />
+            <input type="text" class="form-control" name="platenumber" required />
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-success w-100">Generar renta</button>
           </div>
         </form>
-
       </div>
     </div>
   </div>
-<% include partials/_footer %>
+  <%- include('partials/_footer')%>
