Se corrigen errores y se termina el proyecto

--- a/src/views/partials/_headers.ejs
+++ b/src/views/partials/_headers.ejs
@@ -14,4 +14,8 @@
   <body>
     <nav class="navbar navbar-dark bg-dark mb-4">
       <h1 class="navbar-brand">Renta un carro</h1>
+      <a class="nav-link" href="/cars">Generar carro</a>
+      <a class="nav-link" href="/rents">Generar Renta</a>
     </nav>
+  </body>
+</html>
