--- a/src/views/rents.ejs
+++ b/src/views/rents.ejs
@@ -1,28 +1,43 @@
 <%- include('partials/_headers') %>
-  <div class="container justify-content-center d-flex">
-    <div class="card my-5 w-50">
-      <div class="card-header text-center">
-        <h5>Login a renta de carros</h5>
-      </div>
-      <div class="card-body">
-        <form action="/NewRent" class="text-center mx-5" method="post">
-          <div class="form-group">
-            <label for="rentNumber">Numero de renta</label>
-            <input type="text" class="form-control" name="rentNumber" required />
-          </div>
-          <div class="form-group">
-            <label for="username">Usuario</label>
-            <input type="text" class="form-control" name="username" required />
-          </div>
-          <div class="form-group">
-            <label for="platenumber">Numero de placa</label>
-            <input type="text" class="form-control" name="platenumber" required />
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-success w-100">Generar renta</button>
-          </div>
-        </form>
-      </div>
+<div class="container justify-content-center d-flex">
+  <div class="card my-5 w-50">
+    <div class="card-header text-center">
+      <h5>Login a renta de carros</h5>
+      <strong
+        class="<%= !usuarioExistsOnRent ? 'd-block' : 'd-none'%> text-danger"
+      >
+        El usuario no existe, pruebe con uno existente
+      </strong>
+      <strong
+        class="<%= !carroExistsOnRent ? 'd-block' : 'd-none'%> text-danger"
+      >
+        El carro no existe, pruebe con uno existente
+      </strong>
+      <strong class="<%= rentExists ? 'd-block' : 'd-none'%> text-danger">
+        La renta ya existe, pruebe con otra
+      </strong>
+    </div>
+    <div class="card-body">
+      <form action="/NewRent" class="text-center mx-5" method="post">
+        <div class="form-group">
+          <label for="rentNumber">Numero de renta</label>
+          <input type="text" class="form-control" name="rentNumber" required />
+        </div>
+        <div class="form-group">
+          <label for="username">Usuario</label>
+          <input type="text" class="form-control" name="username" required />
+        </div>
+        <div class="form-group">
+          <label for="platenumber">Numero de placa</label>
+          <input type="text" class="form-control" name="platenumber" required />
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-success w-100">
+            Generar renta
+          </button>
+        </div>
+      </form>
     </div>
   </div>
-  <%- include('partials/_footer')%>
+</div>
+<%- include('partials/_footer')%>
